--- a/四级记忆过程.md
+++ b/四级记忆过程.md
@@ -1,1 +1,13 @@
-宿舍
+**20140819**
+1. trunk, bough, branch, twig（主干，大树枝分叉，小树枝，嫩芽树枝）
+2. bulk n体积、大量、大批
+3. dull 沉闷的，无趣的
+4. mat 草席
+5. 表示猜测语气强弱顺序:must,will,would,ought to,should,can,may,could,might
+6. gas,gasoline,petrol,petroleum（煤气、汽油简写，汽油，石油简写，石油）
+7. draft 起草
+8. boil 使烧开，沸腾
+
+**20140818**
+1. --
+2. 
